--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-node@master
     - run: npm install
     - run: npm run build
-    - run: tar -zcvf release.tgz vue/public vue/vue.config.js vue/package.json vue/package-lock.json vue/pm2.config.json
+    - run: tar -zcvf release.tgz public vue.config.js package.json package-lock.json pm2.config.json
 
     # 发布 Release
     - name: Create Release
@@ -57,4 +57,4 @@ jobs:
           wget https://github.com/QsuperMinQ/JML/releases/latest/download/release.tgz -O release.tgz
           tar zxvf release.tgz
           npm install --production
-          pm2 reload vue/pm2.config.json
+          pm2 reload pm2.config.json
