--- a/pm2.config.json
+++ b/pm2.config.json
@@ -3,7 +3,7 @@
         {
             "name": "JML",
             "script": "npm",
-            "args": "serve"
+            "args": "start"
         }
     ]
 }
