--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@master
       with:
-        repository: vue/
+        path: /vue
 
     # 打包构建
     - name: Build
